Bug 32571 - [4.3 Regression] ICE in set_ssa_val_to, at tree-ssa-sccvn.c:1011
Summary: [4.3 Regression] ICE in set_ssa_val_to, at tree-ssa-sccvn.c:1011
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: tree-optimization (show other bugs)
Version: 4.3.0
: P3 normal
Target Milestone: 4.3.0
Assignee: Not yet assigned to anyone
URL:
Keywords: ice-on-valid-code
: 32576 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-07-01 11:21 UTC by Mike Stein
Modified: 2007-07-03 13:32 UTC (History)
3 users (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Known to work:
Known to fail:
Last reconfirmed: 2007-07-02 00:52:04


Attachments
preprocessed source file from linux-2.6.20, delta-reduced (743 bytes, text/plain)
2007-07-01 11:34 UTC, Mike Stein
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Stein 2007-07-01 11:21:57 UTC
Hello,
there seems to be a problem compiling the attached source file with i686-pc-linux-gnu-gcc:

  gcc -m32 -Wp,-MD,drivers/infiniband/hw/mthca/.mthca_provider.o.d  -nostdinc -isystem /home/mstein/host-gcc/trunk-2007-07-01/bin/../lib/gcc/i686-pc-linux-gnu/4.3.0/include -D__KERNEL__ -Iinclude  -include include/linux/autoconf.h -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs -fno-strict-aliasing -fno-common -Os -pipe -msoft-float -mregparm=3 -mpreferred-stack-boundary=2  -march=i686 -mtune=generic -ffreestanding -maccumulate-outgoing-args -DCONFIG_AS_CFI=1  -Iinclude/asm-i386/mach-default -fno-omit-frame-pointer -fno-optimize-sibling-calls -g  -fno-stack-protector -Wdeclaration-after-statement -Wno-pointer-sign   -DMODULE -D"KBUILD_STR(s)=#s" -D"KBUILD_BASENAME=KBUILD_STR(mthca_provider)"  -D"KBUILD_MODNAME=KBUILD_STR(ib_mthca)" -c -o drivers/infiniband/hw/mthca/.tmp_mthca_provider.o drivers/infiniband/hw/mthca/mthca_provider.c
gcc: warning: -pipe ignored because -save-temps specified
drivers/infiniband/hw/mthca/mthca_provider.c: In function 'mthca_unmap_fmr':
drivers/infiniband/hw/mthca/mthca_provider.c:1133: internal compiler error: in set_ssa_val_to, at tree-ssa-sccvn.c:1011
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.

host gcc -v
Using built-in specs.
Target: i686-pc-linux-gnu
Configured with: /home/mstein/svn/trunk/configure --enable-languages=c --disable-nls --prefix=/n/07/mstein/host-gcc/trunk-2007-07-01
Thread model: posix
gcc version 4.3.0 20070630 (experimental)

Tested revion: 126157
Last succesfull build revision: 126095
Comment 1 Mike Stein 2007-07-01 11:34:25 UTC
Created attachment 13813 [details]
preprocessed source file from linux-2.6.20, delta-reduced
Comment 2 Andrew Pinski 2007-07-02 00:52:03 UTC
Here is a more reduced testcase (without the inline-asm):

struct list_head {
 struct list_head *next, *prev;
};
struct ib_fmr {
 int *device;
 struct list_head list;
};
static inline
struct mthca_fmr *to_mfmr(struct ib_fmr *ibmr)
{
 const struct ib_fmr *__mptr = (ibmr);
 return (struct mthca_fmr *)( (char *)__mptr );
}
void mthca_unmap_fmr(struct list_head *fmr_list)
{
 struct ib_fmr *fmr;
 if (mthca_is_memfree())
 {
  for (fmr =
  ({ const struct list_head *__mptr = ((fmr_list)->next); (struct ib_fmr *)( (char *)__mptr - 8 );});
  &fmr->list != (fmr_list);
  fmr = ({ const struct list_head *__mptr = (fmr->list.next); (struct ib_fmr *)( (char *)__mptr - 8);})
  )
   mthca_arbel_fmr_unmap(to_mfmr(fmr));
 }
 else
  for (fmr = 
  ({ const struct list_head *__mptr = ((fmr_list)->next); (struct ib_fmr *)( (char *)__mptr - 8);});
   &fmr->list != (fmr_list);
   fmr = ({ const struct list_head *__mptr = (fmr->list.next); (struct ib_fmr *)( (char *)__mptr - 8);})
   )
   mthca_tavor_fmr_unmap(to_mfmr(fmr));
}
Comment 3 Daniel Berlin 2007-07-02 04:35:51 UTC
Subject: Bug 32571

Author: dberlin
Date: Mon Jul  2 04:35:37 2007
New Revision: 126186

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=126186
Log:
2007-07-01  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/32571
	* tree-ssa-sccvn.c (visit_use): Shortcut copies to avoid
	simplifying them.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-ssa-sccvn.c

Comment 4 Daniel Berlin 2007-07-02 12:47:42 UTC
Fixed
Comment 5 Richard Biener 2007-07-03 13:32:29 UTC
*** Bug 32576 has been marked as a duplicate of this bug. ***