2007-07-01  Daniel Berlin  <dberlin@dberlin.org>

Fix PR tree-optimization/32571
	* tree-ssa-sccvn.c (visit_use): Shortcut copies to avoid
	simplifying them.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@126186 138bc75d-0d04-0410-961f-82ee72b054a4